[tool.poetry]
name = "dataminingpractice"
version = "0.1.0"
description = ""
authors = ["KevReece <kevinjamesreece@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.28.0"
torch = "^2.1.2"
numpy = "^1.26.3"
ipywidgets = "^8.1.1"
pandas = "^2.2.0"
nltk = "^3.8.1"
gensim = "^4.3.2"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
openai = "^1.10.0"
sentence-transformers = "^2.3.1"
spacy = "^3.7.2"
transformers = "^4.37.2"
dl-translate = "^0.3.0"
evaluate = "^0.4.1"
rouge-score = "^0.1.2"
bert-score = "^0.3.13"
sacremoses = "^0.1.1"
cohere = "^4.47"
datasets = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
